# openzoo

./: README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.turbo/cache/: 003f00b5aedce2c7-manifest.json  003f00b5aedce2c7-meta.json  003f00b5aedce2c7.tar.zst  03a1ed05b656bd50-manifest.json  03a1ed05b656bd50-meta.json  042e517499b6894e-manifest.json  042e517499b6894e-meta.json  05be7d06f8458302-manifest.json  05be7d06f8458302-meta.json  05be7d06f8458302.tar.zst  07f079eab14206e9-manifest.json  07f079eab14206e9-meta.json  07f079eab14206e9.tar.zst  0aea5c1308beab53-manifest.json  0aea5c1308beab53-meta.json  0afc152ecc0a09cd-manifest.json  0afc152ecc0a09cd-meta.json  0fd56a0dbfa4ce1e-manifest.json  0fd56a0dbfa4ce1e-meta.json  12e66fc99eb6dcef-manifest.json  12e66fc99eb6dcef-meta.json  1465bfce5d8a6e33-manifest.json  1465bfce5d8a6e33-meta.json  1775c2e602fc2655-manifest.json  1775c2e602fc2655-meta.json  1775c2e602fc2655.tar.zst  183242302a494577-manifest.json  183242302a494577-meta.json  183242302a494577.tar.zst  18aadd129828a092-manifest.json  18aadd129828a092-meta.json  18ce0574f2a4d712-manifest.json  18ce0574f2a4d712-meta.json  19f44e9b02e7f7a7-manifest.json  19f44e9b02e7f7a7-meta.json  19f44e9b02e7f7a7.tar.zst  (+321 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: main.rs
centrifugo/: config.json
scripts/: perf-baseline.mjs  rollback-drill.ps1  smoke-check.ps1
server/: Dockerfile  fix-migrations.ps1  go.mod  go.sum
(+316 files in other folders)
